--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Sequence_digrams.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Sequence_digrams.tex
@@ -1,9 +1,15 @@
+\vfill
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{UML_diagrams/Sequence_Digrams/visitor_registration_sd.png}
   \caption{Visitor registration sequence diagram}
   \label{fig:visitor_signup_sd}
 \end{figure}
+
+\vfill
+\newpage
+\null
+\vfill
 
 \begin{figure}[H]
   \centering
@@ -12,12 +18,22 @@
   \label{fig:send_report_sd}
 \end{figure}
 
+\vfill
+\newpage
+\null
+\vfill
+
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{UML_diagrams/Sequence_Digrams/watch_mds_sd.png}
   \caption{Watch MDS sequence diagram}
   \label{fig:watch_mds_sd}
 \end{figure}
+
+\vfill
+\newpage
+\null
+\vfill
 
 \begin{figure}[H]
   \centering
@@ -26,12 +42,22 @@
   \label{fig:mine_information_sd}
 \end{figure}
 
+\vfill
+\newpage
+\null
+\vfill
+
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{UML_diagrams/Sequence_Digrams/assign_PT_sd.png}
   \caption{Assign report to PT sequence diagram}
   \label{fig:assign_PT_sd}
 \end{figure}
+
+\vfill
+\newpage
+\null
+\vfill
 
 \begin{figure}[H]
   \centering
@@ -40,6 +66,11 @@
   \label{fig:consult_assigned_report_sd}
 \end{figure}
 
+\vfill
+\newpage
+\null
+\vfill
+
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{UML_diagrams/Sequence_Digrams/ask_suggestion_sd.png}
@@ -47,3 +78,5 @@
   \label{fig:ask_suggestion_sd}
 \end{figure}
 
+\vfill
+\newpage
